; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/extr_fps_counter.c_fps_counter_join.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/extr_fps_counter.c_fps_counter_join.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fps_counter = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fps_counter_join(%struct.fps_counter* %0) #0 {
  %2 = alloca %struct.fps_counter*, align 8
  store %struct.fps_counter* %0, %struct.fps_counter** %2, align 8
  %3 = load %struct.fps_counter*, %struct.fps_counter** %2, align 8
  %4 = getelementptr inbounds %struct.fps_counter, %struct.fps_counter* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.fps_counter*, %struct.fps_counter** %2, align 8
  %9 = getelementptr inbounds %struct.fps_counter, %struct.fps_counter* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = call i32 @SDL_WaitThread(i64 %10, i32* null)
  br label %12

12:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @SDL_WaitThread(i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
